Fixed text not fitting in boxes on mobile in web projects pgae

--- a/css/web-projects.css
+++ b/css/web-projects.css
@@ -136,5 +136,13 @@ h3 {
 @media screen and (max-width: 600px) {
     #headline-container {
         width: auto;
-    }
+	}
+
+	.box-info-container {
+		padding-top: 5px;
+	}
+	
+	.box-info {
+		font-size: .9em;
+	}
   }
